--- a/fluent-package/templates/etc/systemd/fluentd.service.erb
+++ b/fluent-package/templates/etc/systemd/fluentd.service.erb
@@ -18,8 +18,8 @@ Environment=GEM_HOME=<%= gem_install_path %>/
 Environment=GEM_PATH=<%= gem_install_path %>/
 Environment=FLUENT_CONF=/etc/<%= package_dir %>/<%= service_name %>.conf
 Environment=FLUENT_PLUGIN=/etc/<%= package_dir %>/plugin
-Environment=FLUENT_SOCKET=/var/run/<%= package_dir %>/<%= service_name %>.sock
 Environment=FLUENT_PACKAGE_LOG_FILE=/var/log/<%= package_dir %>/<%= service_name %>.log
+Environment=FLUENT_SOCKET=/var/run/<%= package_dir %>/<%= service_name %>.sock
 <% if pkg_type == 'deb' %>
 EnvironmentFile=-/etc/default/<%= service_name %>
 <% else %>
@@ -29,7 +29,7 @@ PIDFile=<%= Shellwords.shellescape("/var/run/#{package_dir}/#{service_name}.pid"
 RuntimeDirectory=<%= Shellwords.shellescape(package_dir) %>
 Type=forking
 # XXX: Fix fluentd executables path
-ExecStart=/opt/<%= package_dir %>/bin/fluentd --log $FLUENT_PACKAGE_LOG_FILE --daemon <%= Shellwords.shellescape("/var/run/#{package_dir}/#{service_name}.pid") %> $FLUENT_PACKAGE_OPTIONS
+ExecStart=/opt/<%= package_dir %>/bin/fluentd --daemon <%= Shellwords.shellescape("/var/run/#{package_dir}/#{service_name}.pid") %> $FLUENT_PACKAGE_OPTIONS
 ExecStop=/bin/kill -TERM ${MAINPID}
 ExecReload=/bin/kill -HUP ${MAINPID}
 Restart=always
